Fix broken CSS style

--- a/jquery/css/jquery.combobox/style.css
+++ b/jquery/css/jquery.combobox/style.css
@@ -59,7 +59,7 @@
 }
 
 .combobox_button {
-    * top: 1px !important;
+    top: 1px !important;
 }
 
 .combobox_selector {
